# ChangeLog for net-analyzer/pnp4nagios
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-analyzer/pnp4nagios/ChangeLog,v 1.61 2014/11/10 13:51:44 ago Exp $

  10 Nov 2014; Agostino Sarubbo <ago@gentoo.org> pnp4nagios-0.6.24.ebuild:
  Stable for ppc64, wrt bug #516140

  10 Nov 2014; Agostino Sarubbo <ago@gentoo.org> pnp4nagios-0.6.24.ebuild:
  Stable for ppc, wrt bug #516140

  27 Oct 2014; Agostino Sarubbo <ago@gentoo.org> pnp4nagios-0.6.24.ebuild:
  Stable for x86, wrt bug #516140

  27 Oct 2014; Agostino Sarubbo <ago@gentoo.org> pnp4nagios-0.6.24.ebuild:
  Stable for amd64, wrt bug #516140

  24 Oct 2014; Justin Lecher <jlec@gentoo.org> +pnp4nagios-0.6.24.ebuild:
  Version BUmp; fixes security issues #516078 & #516140

*pnp4nagios-0.6.24 (24 Oct 2014)

  24 Oct 2014; Justin Lecher <jlec@gentoo.org> +pnp4nagios-0.6.24.ebuild:
  Version BUmp; fixes security issues #516078 & #516140

  15 Jul 2014; Jeroen Roovers <jer@gentoo.org> pnp4nagios-0.6.19-r1.ebuild,
  pnp4nagios-0.6.21.ebuild:
  Set USE=graph dependency on net-analyzer/rrdtool (bug #509682).

  14 Mar 2014; Agostino Sarubbo <ago@gentoo.org> pnp4nagios-0.6.21.ebuild:
  Stable for ppc64, wrt bug #474260

  05 Mar 2014; Agostino Sarubbo <ago@gentoo.org> pnp4nagios-0.6.21.ebuild:
  Stable for ppc, wrt bug #474260

  02 Mar 2014; Pacho Ramos <pacho@gentoo.org> pnp4nagios-0.6.21.ebuild:
  amd64 stable, bug #474260

  24 Feb 2014; Pawel Hajdan jr <phajdan.jr@gentoo.org>
  pnp4nagios-0.6.21.ebuild:
  x86 stable wrt bug #474260

*pnp4nagios-0.6.21 (11 May 2013)

  11 May 2013; Christian Ruppert <idl0r@gentoo.org> -pnp4nagios-0.6.14.ebuild,
  -pnp4nagios-0.6.14-r1.ebuild, -pnp4nagios-0.6.18.ebuild,
  +pnp4nagios-0.6.21.ebuild, -files/pnp4nagios-0.6.7-makefile.patch:
  Version bump. Remove old versions.

  29 Nov 2012; <ago@gentoo.org> pnp4nagios-0.6.19-r1.ebuild:
  Stable for ppc, wrt bug #430358

  26 Sep 2012; Kacper Kowalik <xarthisius@gentoo.org>