@@ -1,32 +1,30 @@
 -----BEGIN PGP SIGNED MESSAGE-----
-Hash: SHA256
+Hash: SHA512
 
 AUX 98_pnp4nagios.conf 1025 SHA256 d4860e09c66e1d20e342a4ab997988ae825e6f4561a9631fd6c608f1c5420a5f SHA512 ac7f4cd92951e856c5af44eb8cfa0c75a867364b6d3d76ed5fb2479631f9ae20587f2d0a09ff4810602665558210232ab41ce6abf53859884a956826cbb5bfc2 WHIRLPOOL d28394eb0f63bd02f71c3ddd6c651f06c69354e2c9fd6fbd0bf65433d4721087078d06aa93df795c80f43a422b35f563b763ed7895891c603d6abbf359a197b1
 AUX npcd 759 SHA256 ea4c71df5c0a6bb410c44b08fc5c5428a3adf8c5daa7a12fe1068eaf71613be5 SHA512 54ccf3da9831b407d7a6b21d3409f7a8c854a32ec6eeda6036997059551bcec52e01b2b63a59e5269fef00c1c859dc856c4c6feb2323ff7fb328dd546c576a80 WHIRLPOOL 4e79bc6ee46a3aad0724488f4fa364b2e6916e30065ff8aed834c2e38929d6fd363210870fb3e4868ee65b0e7073b0d736c954f76415eec37aaa4efe62738454
 AUX npcd.initd 477 SHA256 eb1d5bdf589867136aaefa2f47bd808ef41109860d07d3862fd308585b6d7cff SHA512 c7c0ad6a94820f7327561e779968dc73104bf104bfc3077e952866522e89e7db69c2e289c7e4d61fce978416ef1a8e6d10e3f997fb498ce2157a3c23a869da4d WHIRLPOOL 7ff2db763dc3ee6cf24b0d720e1dd58235681ee1580d44aebbac406631c7c22366d871937eda7d64b4f07448fc28737650e42904aa69a687b7dbf0ab7a0672ab
 AUX pnp4nagios-0.6.14-makefile.patch 1057 SHA256 71fac5f40ba133258754bdd42d503024a7a64da7ae37b96bf6ed20a3c367f2ef SHA512 a67e4b66b0f24db25f9b67d982d99a90c20ad229d404537c9963b2e9f1c5df39a46faa34ecdeb1a9e69b46efd96104d97a39a7e326a01d1c2d09dcc149171602 WHIRLPOOL 7e6725dfef952a97f5d682af955560c88895ae71e5aae9a3bb4842b3696d2f6009e6239c0860991d86fe68d64b4bf7c1e668a5059751cbba4b33850f2bc7584f
-DIST pnp4nagios-0.6.19.tar.gz 3024558 SHA256 fe7a05c52fbcf4b62bd87dcb954995879e990d373118fff0e32bd99f8bd81dd4 SHA512 b3bf004905d4c317f071ea2ab662b859a0f2527137152da4b5473a72b721eadf7760a32c2c5a5e9f10cf8c9a705546f075617b0b30757718fd6050cc20519b3d WHIRLPOOL 0c9ad65dd84a15a83aff0aff359c856e2aca6ea5dddd62ad22e17a3c15746726462841f90f95844afdcc42d097c6760d72131eab66636295564261e187721647
-DIST pnp4nagios-0.6.21.tar.gz 2917588 SHA256 bb5d36a7cc49dcbcfcb424d437dc3739baa647816cffc610fb621216c4f5992a SHA512 8ab85e177342952f0fc15ddc9b14217e1e469ecf8e8316cec0d2cc09206b11dd2b211ccdfc10bc5e071fb3e7f8e1960d1d8bd920d7abe2ce195346384aac3337 WHIRLPOOL f588c1235b81c73c7082cfaef007e5cd51442efadf9c561f4f7361765b15cc8a4b4ef1a191e1b11d346238fbfe93249dd9d0720ee2cd327da7b8395a96ce2938
 DIST pnp4nagios-0.6.24.tar.gz 2919182 SHA256 87412ef01257c6096aa5c84fdb47db950b851c596e1306180be8ba45401793cf SHA512 7e8c32e0ac69ab747a57e8ab6cc59fddfb63e16598fda9c1e6270d6309ff0885cd1bd0876d05aa1d30bffa76b281d41dc8fbe59e430778bf4d3bdddc4a7bee9f WHIRLPOOL 4f48b406a7d82a4370701ede2625ed2c247bb933a9197d3417c4eb18f18b879465aeb4775e9a0f0300ac1140159df6c6130466b5434c0b33bccb7fff04de86f8
-EBUILD pnp4nagios-0.6.19-r1.ebuild 2082 SHA256 0c42867ef215c619c9f1d8dd644fde50cfb9b27a9111d7ed47ce62ade754e007 SHA512 537aa57ebb56514468a1914f30799feaa2b3e5221f6087746bd127000d47e65de1439339be174085a27c5b0f84452eb26efcd86701e27128cc26a50bf96d0d9b WHIRLPOOL 59b38252da30475b0e0c85f3aa1e1433bed8ea1e20eedbf598caa17c68d27f107a534321f33c2d89be2f42f42e69da36c47b8a089a0b71fe0d7ca42b750fdc88
-EBUILD pnp4nagios-0.6.21.ebuild 2079 SHA256 dc1022e6940c4cd3e44411a2545e8ea2287b06664bf06046b1855e9cf7eb8b4c SHA512 5e0a79fa494b188695f8e02352e46b7e6364aa2517bd016bf699ee27152b53f39d783f97fbf65aa346ecd9d2244ea9637e902a60d1cfa3b698023d998f48b73e WHIRLPOOL 2b9cf2f4d392b54d6b3bb0a7e53f21b5c34f5de2b338a158d360b81791a62290003747be81a070e381afa07c0fe208249998b125a16bfef7a6b03ae326c79a37
 EBUILD pnp4nagios-0.6.24.ebuild 2090 SHA256 9bbb4b82fee3508615da92f46381d24d759704c0146f787ebe32ee868516603a SHA512 1ba51aedc02b5103ec5ae4e5f42995a285182bd01508559072c4b6d201f4c03f861a11e4ceb7b3418d4be71732b7444823f97c72133d4fe109fa9b2c5c8cc8a2 WHIRLPOOL bb8686244a1a9517bb846c5971f1b4e688ee6ce92c78c3320d67e18151886badfcab5edc04a1ba5b5bb6ec9678f6e20eeac565790e45bf42e08002078890cfd8
-MISC ChangeLog 9421 SHA256 56b519a9a5fccf8b6779ccd5338758db1c634b7e4aa3cbb1fba9d475ebbf86e5 SHA512 e754243bfd2b2193db940b397b748f72e7cdc14736f2aab2ccf7e0ec3d319b3c936f9567ccee50ec4a5ad17433a71b3ec8471b7ba0847ebf185463bd4d9df903 WHIRLPOOL a9ce47e5db38f65c4c26f90fc2668c5fcddea535e1fde2de999752586cb21225afe4b18a3f4665226bfad3165810910f47dd49a2c2070d249437e460b4a12764
+MISC ChangeLog 9540 SHA256 aacad009c732fc64069a73a79dd9af28300f44887342a2c684f0d3927864a3b5 SHA512 7da91e6a91dcec2f808d95def588e5d2e684c08651e81fde52e8b3413c95426f9c70e3b68d86a14ec3be361d12ae43c987b50bfdd014ad0d6be13781836d2e57 WHIRLPOOL 57861add7d44bed281b7d04f33bf75e0926e31a1aef053d5e2fc46cde991ea3ba2e736ee1c6c305dbf384928ef7d0589d79267c8031259ad9812a7da77ed0da4
 MISC metadata.xml 163 SHA256 a8aa48f63dab89c2af1f961029dea0ebf68a618dba59ac4661ea915dc85e18f0 SHA512 1744b806c2ddddbeee4d2b1e23c7f1ccf0d9427f679a65bd22cde617399d3a5bb30aada17ba5b648a3a46d9e1169b9d30ede4551fb8756dffc4e3e9306b199cf WHIRLPOOL b5af95c50999aaf066e6466928866baa34c6425459a580ab0712ba3e3ea518dc37a4082007043307ff169b1f8efe4f6a632d27d016b6fd307bf463cb47b78d55
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2
+Version: GnuPG v2.0
 
-iQIcBAEBCAAGBQJUYMLxAAoJELp701BxlEWfe6wQAJN9AHjy7yJQCexXzPDxlG/0
-Ejdklnvz0XTr8sOMHJhyjQy9cVw1oKl8cBpC2mkgGFmSIxSZszK09FLgvQ2pmRkI
-7SL6bokZJh3bQl0u+5TLAk0aPjOMFW/NC74RgpmKGPb8KxB3nv8ON9Me1bI46I4z
-AANNRECXH/TeA90h5qMSAf94EHxLVIwLijG7FwNuZbLKyLszJboGbEv7yCdfff8J
-p17fzLaKPpL8XtNSKEMcwmOuvSHsZ81aqFUEgJXSVzXFQijCYb6fDiC9Nf53IOOE
-DiDW51wcE3WiJb+V8WMULENZDiby6+ENShyyBIYdDwDCHCjAv4yrLxiXBC+X+yrw
-D6NmrVKAkWHXeYFZip6LEDTxYcwbXt4Bffbi5y9DnvUhNORcPhgxfse0CCxomocg
-LqV+ljNFv089ucKf5Vy/VtD60WLLdY4yeqRkXzdrwH+Ng6m1OuXGkd5XHGqF+rZu
-8Hdw3im5HmdXrM/XeLqoKzEpbNn/B9i4HjZGswaTDeimwnQfRDHndvhx7vfwG+3m
-Zzjv5qhvO23Rkt4AycpkRTWmUGN7yf5vDNN15S0XZjOUhHvo9wmXWrniGoIpWSh6
-/BdB4QojCED/x08oqETCxzmRnwvyikMqe/YiqKvDZtOPgnjFDQOyULzvRu3wzZMm
-ONGSS8r3lhu91IhEiMUQ
-=L2Tn
+iQJ8BAEBCgBmBQJUYMOhXxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
+ZW5wZ3AuZmlmdGhob3JzZW1hbi5uZXQyQ0JDQjFGMzBDQ0UxMjFGNENDNDgxMDdC
+OUQ0RjIzMUJEMTU1OEFCAAoJELnU8jG9FVirNzoP/ApkkSAlXXh28hGQLA1Nf7wv
+WD+3uZ55qU82fHSpiNCuitYN/yUs8RWuH/PN3oOJmtuxPECNhyNQrtoAaQ1si674
+FIY+vOZrAOx2bd08FSqIEJxMDgmhr1GBmYXhUeVjztj+0skPv6SWbHMHPVDyd0yr
+gYBf58aMCSvQl7cC+A3t/TmfuNrL/GlUVEA9QMl75VUmFNFMQ3fm+x0WsgcwJRCJ
+eSCsBlQspPKydJztWGkysavEIzEdVGPmVEWMqGYlEu6OrC+tSBNAbYT06kd0tYU3
+ts3RqHIGgfuqpd/jeGUT91+loh1A/WVrAhf7OYSB2LsdMmAP0w3HAEr1pHbXR3BK
+PekVwtT98EQN3T03Hb/4xLK3eErldve/iUdzIP3i8REbg+TZvcIZAumVGCHwuZJ5
+0y6p3n/YvhN2IglNkHEqjYqxWZcuuGMpa7Nm9qL6kbTy/4oeF7hpekgsPCd69yGx
+JhyBXkqxlmhsBIOmQw4tAy3qhZNgNiloc4J+POrvZJ8ts+Pg+qcgzTGKRidhBxda
+5yousoqaQxXlyxamEmlkEzYUTvrjPfv4i8ObDj6mQrCHi2XZ9A7ZBp3lcsPgRQec
+FtvVAyZ/ewcsRjimQk77fcArAzPYM92Pn39lcrMg1MXXu8zWHkl585R/tZR9t5jM
+WxN3FT+easVElvSRnk9G
+=0tQf
 -----END PGP SIGNATURE-----
